# AssetManagement

./: .coveragerc  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml  ruff.yml
advanced_analysis/: ml.py  tsa.py
analysis/: volatility.py
config/: passwords-TEMPLATE.config
db_insert/: asset_transactions_insert.csv  bank_accounts_insert.csv  bank_accounts_insert_p.csv  insert_sql.py  savings_account_insert.csv  transactions_insert.csv  transactions_insert_c.csv  transactions_insert_p.csv
report/: excel_report.py  moving_average.py  plots.py  to_excel_app.py
sql/: p_analysis.sql
tests/: mock_user_config.json  passwords_tests.config  test_unit_am_utils.py  test_unit_date_utils.py  test_unit_db_utils.py
utils/: am_utils.py  date_utils.py  db_utils.py
