[tool.poetry]
name = "AssetManagement"
version = "1.0.0"
description = "Project to create stable codebase for asset management"
authors = ["Jussi Virtanen <jussi.virtanen2@protonmail.com>"]

[tool.poetry.dependencies]
python = "3.11"
pandas = "^1.4.3"
numpy = "^1.23.1"
yfinance = "^0.1.74"
statsmodels = "^0.14.0"
matplotlib = "^3.5.3"
SQLAlchemy = "^1.4.44"
openpyxl = "^3.1.2"
pytest = "^7.4"
coverage = "^7.2.7"
pytest-cov = "^4.1.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
