[tool.poetry]
name = "assetmanagement"
version = "1.0.0"
description = "Project to create stable codebase for asset management"
authors = ["jussivirtanen1 <jussi.virtanen2@protonmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
numpy = "1.25.2"
yfinance = "0.2.28"
statsmodels = "0.14.0"
matplotlib = "3.8.0"
SQLAlchemy = "2.0.20"
openpyxl = "3.1.2"
psycopg2 = "^2.9.7"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
coverage = "^7.3.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
